<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="#F5F5F5"
        tools:context="com.example.android.evus.Instructions">

        <TextView
            android:id="@+id/st_step_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:fontFamily="serif"
            android:text="@string/sts_instructions"
            android:textSize="16sp"
            android:textColor="#000" />

        <TextView
            android:id="@+id/nd_step_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="serif"
            android:text="@string/nds_instructions"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_below="@+id/st_step_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/rd_step_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:fontFamily="serif"
            android:text="@string/rds_instructions"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_below="@+id/nd_step_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/only_vus_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:fontFamily="serif"
            android:text="@string/vus_only"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</ScrollView>