<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5"
        tools:context="com.example.android.evus.MainActivity">

        <TextView
            android:id="@+id/text_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="5dp"
            android:layout_marginLeft="10dp"
            android:paddingTop="5dp"
            android:text="@string/choose_course"
            android:textColor="@color/label_color" />

        <Spinner
            android:id="@+id/course_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:background="@drawable/spinner_design"
            android:textColor="@color/textColor"
            android:layout_below="@+id/text_spinner"
            android:layout_alignLeft="@+id/linearLayout"
            android:layout_alignStart="@+id/linearLayout"
            android:layout_alignRight="@+id/linearLayout"
            android:layout_alignEnd="@+id/linearLayout" />

            <TextView
                android:id="@+id/enrollment_year_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enrollment_year"
                android:fontFamily="sans-serif-condensed"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:textColor="@color/label_color"
                android:layout_below="@+id/course_spinner"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:weightSum="2"
            android:layout_below="@+id/enrollment_year_text"
            android:layout_alignLeft="@+id/linearLayout"
            android:layout_alignStart="@+id/linearLayout">
            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/earlierEnrolmentRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/before2014"/>

                <RadioButton
                    android:id="@+id/laterEnrolmentRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/after2014" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/linearlayout_border"
            android:orientation="horizontal"
            android:id="@+id/linearLayout"
            android:weightSum="2"
            android:layout_below="@+id/linearLayout2"
            android:layout_alignRight="@+id/ects_enrolled"
            android:layout_alignEnd="@+id/ects_enrolled"
            android:layout_alignLeft="@+id/ects_enrolled"
            android:layout_alignStart="@+id/ects_enrolled">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="87dp"
                android:layout_weight="1"
                android:background="@drawable/relativelayout_border">

                <TextView
                    android:id="@+id/text_ects_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/priceof_one_ects"
                    android:textColor="@color/label_color"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/ects_price_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/label_color"
                    android:layout_below="@+id/text_ects_price"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="right">

                <TextView
                    android:id="@+id/text_enrolling_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="24dp"
                    android:text="@string/enrolling_cost"
                    android:textColor="@color/label_color" />

                <TextView
                    android:id="@+id/text_enrolling_cost_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_enrolling_cost"
                    android:layout_centerHorizontal="true"
                    android:padding="5dp"
                    android:text="260.00 kn"
                    android:textColor="@color/label_color"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/text_upisani_ects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/enrolled_ects"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/label_color"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/ects_enrolled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/text_upisani_ects"
            android:background="@drawable/edittext_design"
            android:hint="@string/enrolled_hint"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/disabled" />

        <TextView
            android:id="@+id/text_nepolozeni_ects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/unfulfilled_ects"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/label_color"
            android:layout_below="@+id/ects_enrolled"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/ects_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edittext_design"
            android:hint="@string/unfulfilled_hint"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="#000"
            android:layout_below="@+id/ects_enrolled"
            android:layout_alignLeft="@+id/ects_enrolled"
            android:layout_alignStart="@+id/ects_enrolled" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:background="@drawable/clicked_button"
            android:text="@string/calculate_text"
            android:textColor="@color/color_btn"
            android:layout_marginTop="14dp"
            android:layout_below="@+id/ects_input"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_alignEnd="@+id/ects_input"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/ects_input"
            android:layout_below="@+id/calculate"
            android:layout_toEndOf="@+id/text_upisani_ects"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_toRightOf="@+id/text_upisani_ects">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.03">

                <TextView
                    android:id="@+id/text_summary_ects"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="5dp"
                    android:text="@string/user_ects"
                    android:textColor="@color/label_color"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/text_summary_ects_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/text_summary_ects"
                    android:layout_alignStart="@+id/text_summary_ects"
                    android:layout_below="@+id/text_summary_ects"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"
                    android:paddingBottom="5dp"
                    android:textColor="#FF003385"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:hint="60.0" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.03">

                <TextView
                    android:id="@+id/text_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/summary"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/label_color"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/text_summary_price_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    tools:hint="2700.0 kn"
                    android:textColor="#FF003385"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_below="@+id/text_summary"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>